<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity">

    <TextView
        android:id="@+id/tvInscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        style="@style/txtDefault"
        />
    <EditText
        android:hint="@string/first_name"
        android:layout_below="@id/tvInscription"
        android:inputType="text"
        android:id="@+id/txtFisrtName"
        style="@style/inputDefaut"
        />
    <EditText
        android:hint="@string/last_name"
        android:layout_below="@id/txtFisrtName"
        android:inputType="text"
        android:id="@+id/txtLastName"
        style="@style/inputDefaut"
        />
    <TextView
        android:id="@+id/tvDegreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLastName"
        android:text="@string/degrees"
        style="@style/inputDefaut"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/o_level"
        android:layout_below="@id/tvDegreet"
        android:id="@+id/cbOlevel"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bachelor"
        android:layout_below="@id/cbOlevel"
        android:id="@+id/cbBachelor"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/master"
        android:layout_below="@id/cbBachelor"
        android:id="@+id/cbMaster"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        />

    <Button
        style="@style/btnDefault"
        android:id="@+id/btnSaveInscription"
        android:text="@string/valid"
        android:layout_below="@id/cbMaster"
        android:background="@color/colorPrimary"
        />

</RelativeLayout>