<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:text="@string/connection"
        android:textSize="30dp"
        android:id="@+id/tvConnection"
        style="@style/tvCotection"
        />

    <EditText
        android:hint="@string/login"
        android:layout_below="@id/tvConnection"
        android:inputType="text"
        android:id="@+id/txtLogin"
        style="@style/txtDefault"
        />
    <EditText
        android:hint="@string/password"
        android:layout_below="@id/txtLogin"
        android:inputType="textPassword"
        android:id="@+id/txtPassword"
        style="@style/txtDefault"
        />

    <Button
        android:id="@+id/btnConnection"
        android:layout_below="@id/txtPassword"
        android:text="@string/connection"
        style="@style/btnBlue"
        />
    <Button
        android:text="@string/inscription"
        android:id="@+id/btnInscription"
        android:layout_below="@id/btnConnection"
        style="@style/btnRed"
        />


</RelativeLayout>